--- a/ourShef/src/main/resources/static/css/loginHome.css
+++ b/ourShef/src/main/resources/static/css/loginHome.css
@@ -1,4 +1,12 @@
 /*###################### Login Home ###########################*/
+.head-text-top-frame {
+	float: none;
+	margin: auto;
+}
+
+.head-text-top-frame h3 {
+	line-height: 1.3;
+}
 
 .user-spot {
   border: 2px solid rgb(228, 228, 228);
@@ -71,6 +79,12 @@
   top: 260px;
 }
 
+.spot-info-bottom div{
+	word-break: break-all;
+	height: 120px;
+	overflow: hidden;
+}
+
 .head-text{
   font-size: 20px;
   margin-top: 20px;
@@ -78,15 +92,6 @@
   color: gray;
 }
 
-
-
-.user-spot-slider div {
-  text-align: center;
-}
-
-.slick-slide div div {
-  text-align: center;
-}
 
 .slick-next, .slick-prev {
   background-color: rgb(211, 226, 255);
