--- a/ourShef/src/main/resources/static/css/spotListOfUser.css
+++ b/ourShef/src/main/resources/static/css/spotListOfUser.css
@@ -1,4 +1,12 @@
 /* #################################### spotListOfUser ############################################## */
+.head-text-top-frame {
+	float: none;
+	margin: auto;
+	font-size: 24px;
+	line-height: 1.4;
+	padding-top: 30px;
+	padding-bottom:20px;
+}
 
 /* visitor info */
 .visitor-info{
