--- a/ourShef/src/main/resources/templates/confirm/spotDeleteConfirm.html
+++ b/ourShef/src/main/resources/templates/confirm/spotDeleteConfirm.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SpotDelete Confirm</title>
   <!-- bootStrap -->
-  <link rel="stylesheet" href="../../static/bootStrap/bootstrap-theme.css">
-  <link rel="stylesheet" href="../../static/bootStrap/bootstrap.css">
+  <link rel="stylesheet" th:href="@{/bootStrap/bootstrap-theme.css}" href="../../static/bootStrap/bootstrap-theme.css">
+  <link rel="stylesheet" th:href="@{/bootStrap/bootstrap.css}" href="../../static/bootStrap/bootstrap.css">
   <!-- common -->
-  <link rel="stylesheet" href="/static/common.css">
+  <link rel="stylesheet" th:href="@{/common.css}" href="/static/common.css">
   <!-- specific -->
-  <link rel="stylesheet" href="../../static/css/spotDeleteConfirm.css">
+  <link rel="stylesheet" th:href="@{/css/spotDeleteConfirm.css}" href="../../static/css/spotDeleteConfirm.css">
 </head>
 <body>
   <div class="container">
@@ -21,6 +21,6 @@
     </div>
   </div>
   <!-- bootstrap -->
-  <script src="../../static/bootStrap/bootstrap.min.js"></script>
+  <script th:href="@{/bootStrap/bootstrap.min.js}" src="../../static/bootStrap/bootstrap.min.js"></script>
 </body>
 </html>
