--- a/ourShef/src/main/resources/templates/spot/spotModification.html
+++ b/ourShef/src/main/resources/templates/spot/spotModification.html
@@ -25,11 +25,12 @@
             th:action
             method="post"
             enctype="multipart/form-data">
+       		<input th:field="*{spotId}" type="hidden">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-2"></div>
                     <div class="col-xs-8">
-                        <h3 class="text-primary">맛집 수정</h3>
+                        <div class="text-shefGreen head-text-top">맛집 수정</div>
                     </div>
                     <div class="col-xs-2"></div>
                 </div>
@@ -124,7 +125,7 @@
                     <div class="col-xs-5 col-md-2">
                         <button class="btn-shefGreen" type="submit">수정하기</button>
                         <button class="btn-shefGreen btn-delete" type="button" 
-                        onclick="location.href='/'">삭제하기</button>
+                        onclick="dispatchSpotToBeDeleted(this.form)">삭제하기</button>
                     </div>
                     <div class="col-md-1"></div>
                 </div>
