--- a/ourShef/src/main/resources/static/css/acquaintanceList.css
+++ b/ourShef/src/main/resources/static/css/acquaintanceList.css
@@ -1,86 +1,95 @@
 /* ########################## acquaintanceList ############################# */
 ul {
-  list-style-type: none;
-  padding: 0;
+	list-style-type: none;
+	padding: 0;
 }
+
+.acquaintance-profile-img-frame {
+	line-height: 100px;
+}
+
 ul img {
-  width: 90px;
-  border-radius: 50%;
-  display: block;
-  margin-top: 5px;
+	width: 80px;
+	max-height: 80px;
+	border-radius: 50%;
+	margin-top: 5px;
 }
 
 ul li {
-  height: 100px;
-  width: 400px;
-  border-radius: 16px;
-  border-bottom: 1px solid gray;
-  background-color: rgb(255, 255, 255);
-  margin: auto;
-  margin-top: 2px;
+	height: 100px;
+	width: 400px;
+	border-radius: 16px;
+	border-bottom: 1px solid gray;
+	background-color: rgb(255, 255, 255);
+	margin: auto;
+	margin-top: 2px;
 }
 
 ul span {
-  display: inline-block;
-  /* border: 1px solid red; */
-  height: 100px;
-  vertical-align: top;
-  margin: 0 5px;
+	display: inline-block;
+	/* border: 1px solid red; */
+	height: 100px;
+	vertical-align: top;
+	margin: 0 5px;
 }
+
 ul .user-info {
-  line-height: 100px;
+	line-height: 100px;
 }
 
-.input-wrapper{
-  line-height: 100px;
+.input-wrapper {
+	line-height: 100px;
 }
 
-.input-delete{
-  transform: scale(1.2);
-  display: none;
+.input-delete {
+	transform: scale(1.2);
+	display: none;
 }
 
 .nickName {
-  font-size: 16px;
-  /* border: 1px solid red; */
-  width: 100px;
+	font-size: 16px;
+	/* border: 1px solid red; */
+	width: 100px;
 }
 
-.reliabilitySystem{
-  margin: auto;
+.reliabilitySystem {
+	margin: auto;
 }
 
 ul .wrapper {
-  /* border: 1px solid red; */
-  line-height: normal;
-  display: inline-block;
-  vertical-align: middle;
-  text-align: center;
+	/* border: 1px solid red; */
+	line-height: normal;
+	display: inline-block;
+	vertical-align: middle;
+	text-align: center;
 }
 
 ul .btn-frame {
-  line-height: 100px;
+	line-height: 100px;
 }
 
 .btns {
-  text-align: center;
+	margin-top: 10px;
+	margin-bottom: 15px;
+	text-align: center;
 }
 
 .message-component-wrapeer {
-  display: inline-block;
-  position: relative;
+	display: inline-block;
+	position: relative;
 }
-.new-message-pop{
-  position: absolute;
-  top: -10px;
-  left: -5px;
-  color:rgb(255, 255, 255);
-  background-color: rgb(255, 158, 113);
-  box-shadow: 0 0 4px rgb(255, 241, 241);
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  line-height: 23px;
-  text-align: center;
-  font-weight:500;
+
+.new-message-pop {
+	position: absolute;
+	top: -10px;
+	left: -5px;
+	color: rgb(255, 255, 255);
+	background-color: rgb(255, 158, 113);
+	box-shadow: 0 0 4px rgb(255, 241, 241);
+	border-radius: 50%;
+	width: 20px;
+	height: 20px;
+	line-height: 23px;
+	text-align: center;
+	font-weight: 500;
 }
