--- a/ourShef/src/main/resources/templates/acquaintance/relationshipResponseBox.html
+++ b/ourShef/src/main/resources/templates/acquaintance/relationshipResponseBox.html
@@ -1,92 +1,83 @@
 <!DOCTYPE html>
-<html lang="ko">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!--jQuery-->
-        <script src="../../static/library/jquery-2.1.4.js"></script>
+<!--부트 스트랩-->
+<link rel="stylesheet" th:href="@{/bootStrap/bootstrap-theme.css}" href="../../static/bootStrap/bootstrap-theme.css">
+<link rel="stylesheet" th:href="@{/bootStrap/bootstrap.css}" href="../../static/bootStrap/bootstrap.css">
 
-        <!--부트 스트랩-->
-        <link rel="stylesheet" href="../../static/bootStrap/bootstrap-theme.css">
-        <link rel="stylesheet" href="../../static/bootStrap/bootstrap.css">
+<!--common -->
+<link rel="stylesheet" th:href="@{/common.css}" href="../../static/common.css">
 
-        <!--common -->
-        <link rel="stylesheet" href="../../static/common.css">
+<!--specific-->
+<link rel="stylesheet" th:href="@{/css/relationshipResponseBox.css}"
+	href="../../static/css/relationshipResponseBox.css">
 
-        <!--specific-->
-        <link rel="stylesheet" href="../../static/css/relationshipResponseBox.css">
-
-        <title>RelationshipResponseBox</title>
-    </head>
-    <body>
-        <form id="form-i1" action="#none">
-            <div class="container">
-                <div class="row text-center text-primary">
-                    <h3 class="text-shefGreen">받은 친분 요청</h3>
-                </div>
-                <div class="row">
-                    <ul>
-                        <li>
-                            <span class="user-info">
-                                <div class="nickName">맛있는집을찾아다녀요</div>     
-                            </span>
-                            <span class="added-text-frame">
-                              <div class="added-text">의 요청</div>
-                            </span>
-                            <span class="btn-frame">
-                              <div class="btns-response">
-                                <button class="btn btn-danger btn-reject" type="button">거절</button>
-                                <button class="btn btn-info btn-accept" type="button">수락</button>
-                                <input class="input-delete" type="checkbox">
-                              </div>
-                            </span>
-                        </li>
-                        <li>
-                          <span class="user-info">
-                              <div class="nickName">맛있는집을찾아다녀요</div>     
-                          </span>
-                          <span class="added-text-frame">
-                            <div class="added-text">의 요청</div>
-                          </span>
-                          <span class="btn-frame">
-                            <div class="btns-response">
-                              <button class="btn btn-muted btn-rejected" type="button" disabled="true">거절됨</button>
-                              <input class="input-delete" type="checkbox">
-                            </div>
-                          </span>
-                      </li>
-                      <li>
-                        <span class="user-info">
-                            <div class="nickName">맛있는집을찾아다녀요</div>     
-                        </span>
-                        <span class="added-text-frame">
-                          <div class="added-text">의 요청</div>
-                        </span>
-                        <span class="btn-frame">
-                          <div class="btns-response">
-                            <button class="btn btn-success btn-accepted" type="button" disabled="true">수락됨</button>
-                            <input class="input-delete" type="checkbox">
-                          </div>
-                        </span>
-                    </li>
-                    </ul>
-                </div>
-                <div class="row">
-                    <div class="btns-footer">
-                        <button class="btn-shefGreen" type="button">이전으로</button>
-                        <button class="btn-shefGreen">보낸 친분 요청</button>
-                        <button class="btn-shefGreen btn-delete">삭제하기</button>
-                    </div>
-                </div>
-            </div>
-        </form>
-    </div>
-    <!--부트 스트랩-->
-    <script src="../../static/bootStrap/bootstrap.min.js"></script>
-    <!-- specific -->
-    <script src="../../static/js/relationshipResponseBox.js"></script>
+<title>RelationshipResponseBox</title>
+</head>
+<body>
+	<form id="form-i1" action="#none">
+		<div class="container">
+			<div class="row text-center text-primary">
+				<h3 class="text-shefGreen">받은 친분 요청</h3>
+			</div>
+			<div class="row">
+				<ul>
+					<li><span class="user-info">
+							<div class="nickName">맛있는집을찾아다녀요</div>
+					</span> <span class="added-text-frame">
+							<div class="added-text">의 요청</div>
+					</span> <span class="btn-frame">
+							<div class="btns-response">
+								<button class="btn btn-danger btn-reject" type="button">거절</button>
+								<button class="btn btn-info btn-accept" type="button">수락</button>
+								<input class="input-delete" type="checkbox">
+							</div>
+					</span></li>
+					<li><span class="user-info">
+							<div class="nickName">맛있는집을찾아다녀요</div>
+					</span> <span class="added-text-frame">
+							<div class="added-text">의 요청</div>
+					</span> <span class="btn-frame">
+							<div class="btns-response">
+								<button class="btn btn-muted btn-rejected" type="button"
+									disabled="true">거절됨</button>
+								<input class="input-delete" type="checkbox">
+							</div>
+					</span></li>
+					<li><span class="user-info">
+							<div class="nickName">맛있는집을찾아다녀요</div>
+					</span> <span class="added-text-frame">
+							<div class="added-text">의 요청</div>
+					</span> <span class="btn-frame">
+							<div class="btns-response">
+								<button class="btn btn-success btn-accepted" type="button"
+									disabled="true">수락됨</button>
+								<input class="input-delete" type="checkbox">
+							</div>
+					</span></li>
+				</ul>
+			</div>
+			<div class="row">
+				<div class="btns-footer">
+					<button class="btn-shefGreen" type="button" onclick="location.href='/acquaintance/myAcquaintanceList'">리스트로</button>
+					<button class="btn-shefGreen" type="button" onclick="location.href='/acquaintance/relationshipRequestBox'">보낸 친분 요청</button>
+					<button class="btn-shefGreen btn-delete">삭제하기</button>
+				</div>
+			</div>
+		</div>
+	</form>
+	</div>
+	<!--jQuery-->
+	<script th:src="@{/library/jquery-2.1.4.js}"
+		src="../../static/library/jquery-2.1.4.js"></script>
+	<!--부트 스트랩-->
+	<script th:src="@{/bootStrap/bootstrap.min.js}" src="../../static/bootStrap/bootstrap.min.js"></script>
+	<!-- specific -->
+	<script th:src="@{/js/relationshipResponseBox.js}" src="../../static/js/relationshipResponseBox.js"></script>
 
 </body>
 </html>
