Reliability Calculation Update and JoinController Withdraw Update

--- a/ourShef/src/main/resources/templates/user/loginUserInfo.html
+++ b/ourShef/src/main/resources/templates/user/loginUserInfo.html
@@ -25,7 +25,7 @@
 }
 </style>
 <body>
-	<form action="#none" th:action method="post"
+	<form id="form-i1" action="#none" th:action method="post"
 		th:object="${userInfoChangeForm}" enctype="multipart/form-data">
 		<div class="container">
 			<div class="row text-center">
