--- a/ourShef/src/main/resources/templates/confirm/accountDeleteConfirm.html
+++ b/ourShef/src/main/resources/templates/confirm/accountDeleteConfirm.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AccountDelete Confirm</title>
   <!-- bootStrap -->
-  <link rel="stylesheet" href="../../static/bootStrap/bootstrap-theme.css">
-  <link rel="stylesheet" href="../../static/bootStrap/bootstrap.css">
+  <link rel="stylesheet" th:href="@{/bootStrap/bootstrap-theme.css}" href="../../static/bootStrap/bootstrap-theme.css">
+  <link rel="stylesheet" th:href="@{/bootStrap/bootstrap.css}" href="../../static/bootStrap/bootstrap.css">
   <!-- common -->
-  <link rel="stylesheet" href="/static/common.css">
+  <link rel="stylesheet" th:href="@{/common.css}" href="/static/common.css">
   <!-- specific -->
-  <link rel="stylesheet" href="../../static/css/accountDeleteConfirm.css">
+  <link rel="stylesheet" th:href="@{/css/accountDeleteConfirm.css}" href="../../static/css/accountDeleteConfirm.css">
 </head>
 <body>
   <div class="container">
@@ -24,6 +24,6 @@
     </div>
   </div>
   <!-- bootstrap -->
-  <script src="../../static/bootStrap/bootstrap.min.js"></script>
+  <script th:src="@{/bootStrap/bootstrap.min.js}" src="../../static/bootStrap/bootstrap.min.js"></script>
 </body>
 </html>
