Img File extension Update

--- a/ourShef/src/main/resources/templates/login/joinForm.html
+++ b/ourShef/src/main/resources/templates/login/joinForm.html
@@ -35,7 +35,7 @@
 					</p>
 					<p>
 						<input value="" type="file" th:field="*{joinFormProfileImgFile}"
-							accept=".jpg, .png" style="margin: 0; display: none;">
+							accept=".jpg, .jpeg, .png, .heic" style="margin: 0; display: none;">
 					</p>
 					<div class="text-danger" th:errors="*{joinFormProfileImgFile}">
 						프로필 이미지 오류</div>
