--- a/ourShef/src/main/resources/templates/user/loginUserInfo.html
+++ b/ourShef/src/main/resources/templates/user/loginUserInfo.html
@@ -39,7 +39,7 @@
 					</p>
 					<p>
 						<input value="" id="profileImgFile" type="file"
-							th:field="*{profileImgFile}" accept=".jpg, .png"
+							th:field="*{profileImgFile}" accept=".jpg, .jpeg, .png, .heic"
 							style="margin: 0; display: none;">
 					</p>
 					<div class="text-danger" th:errors="*{profileImgFile}">프로필
