--- a/ourShef/src/main/resources/templates/error/404.html
+++ b/ourShef/src/main/resources/templates/error/404.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" th:href="@{/css/404.css}" href="/static/css/404.css">
 </head>
 <body>
-  <img th:src="@{/img/shefMarkError.png}" src="/static/img/shefMarkError.png">
+  <img class="error-img">
   <div class="text-shefGreen">서버에 오류가 발생하였습니다.</div>
   <script th:src="@{/common.js}" src="/static/common.js"></script>
 </body>
