--- a/ourShef/src/main/resources/templates/error/doNotHavePermission.html
+++ b/ourShef/src/main/resources/templates/error/doNotHavePermission.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" th:href="@{/css/doNotHavePermission.css}" href="/static/css/doNotHavePermission.css">
 </head>
 <body>
-  <img th:src="@{/img/shefMarkError.png}" src="/static/img/shefMarkError.png">
+  <img class="error-img">
   <div class="text-shefGreen">접근 권한이 없습니다.</div>
   <script th:src="@{/common.js}" src="/static/common.js"></script>
 </body>
