--- a/ourShef/src/main/resources/templates/login/joinForm.html
+++ b/ourShef/src/main/resources/templates/login/joinForm.html
@@ -22,6 +22,10 @@
 <title>Sign Up</title>
 </head>
 <body class="joinForm">
+	<div class="loader">
+		<div class="loader-circle"></div>
+		<div class="loader-back"></div>
+	</div>
 	<form action="#none" th:action method="post" th:object="${joinForm}"
 		enctype="multipart/form-data">
 		<div class="container">
@@ -93,11 +97,19 @@
 			</div>
 		</div>
 	</form>
+	<!-- JQuery -->
+	<script th:src="@{/library/jquery-2.1.4.js}"></script>
 	<!--부트 스트랩-->
 	<script th:src="@{/bootStrap/bootstrap.min.js}" src="../../static/bootStrap/bootstrap.min.js"></script>
 	<!--common.js-->
 	<script th:src="@{/common.js}" src="../../static/common.js"></script>
+	<!-- imgFileUpload -->
+	<script th:src="@{/library/heic2any/heic2any.min.js}"></script>
+	<script th:src="@{/js/imgFileUpload.js}"></script>
 	<!-- specific -->
 	<script th:src="@{/js/joinForm.js}" src="../../static/js/joinForm.js"></script>
+	
+	
+	
 </body>
 </html>
